Change article title

--- a/public/index.html
+++ b/public/index.html
@@ -77,7 +77,7 @@
             <li>
                 <aside class="dates">Aug 26</aside>
                 <a href='/post/forecasting-arima-modelling-gdp-eurostat/'>
-                    Forecasting GDP in the eurozone, using Eurostat dataset
+                    Forecasting GDP in the eurozone
                     
                         
                             <h2>[Aug 26, 2018] Forecasting eurozone quarterly GDP (Gross domestic product) using Eurostat data &amp; ARIMA modelling</h2>
