Update photo & summary

--- a/public/about/index.html
+++ b/public/about/index.html
@@ -71,9 +71,10 @@
 
 
 <section id="wrapper" class="home">
-    <p>I’m a Data Scientist with a broad background integrating Data Science, Statistics, Analytics, Information Technology &amp; Marketing. I&rsquo;ve worked across the entire spectrum from technology- building complex data models, designing frameworks, analyzing and visualizing data – to people where I’ve worked with marketers and stakeholders to recommend and implement data driven insights.</p>
+    <p>I&rsquo;m a data scientist and I&rsquo;ve worked across the entire spectrum from technology - building complex data models, designing/developing/prototyping analytics applications, analyzing and visualizing data – to people where i&rsquo;ve worked with business executives and stakeholders to recommend and implement data driven insights.</p>
 
-<p>My interests include statistics, machine learning and programming in R and Python. This blog is built with blogdown and Hugo, and deployed using Netlify.</p>
+<p>I love using data to answer interesting questions and communicate the results
+in diverse audiences. This blog is built with blogdown and Hugo, and deployed using Netlify.</p>
 
 
     
