--- a/public/index.html
+++ b/public/index.html
@@ -63,7 +63,7 @@
                 <img id="avatar" class="2x" src="/images/avatar.png"/>
             </a>
             <h1>Manos Antoniou</h1>
-            <h2>Advanced Analytics | Data Science Blog</h2>
+            <h2>Data Science | Advanced Analytics Blog</h2>
         </header>
     </section>
 </div>
